Visualisation of PCA should work now

--- a/AAFPG/data/Editing dataframes for plots.ipynb
+++ b/AAFPG/data/Editing dataframes for plots.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "60313495",
+   "id": "76dfce7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7acee70e",
+   "id": "671faea1",
    "metadata": {},
    "source": [
     "### Editing Keith's df for PCA and Projector Tensorflow - Machine Learning data"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3520a23e",
+   "id": "3f520d1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3a9d5391",
+   "id": "75240ec3",
    "metadata": {
     "scrolled": true
    },
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc05ebba",
+   "id": "e3ac7791",
    "metadata": {
     "scrolled": true
    },
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "01302614",
+   "id": "c486ae73",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "23db9bba",
+   "id": "ba7b1ba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "10ac3c03",
+   "id": "2525ed40",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5f3192ed",
+   "id": "53ea6450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "741dbd56",
+   "id": "3931d27f",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "788e3b52",
+   "id": "1f885a74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "61ca3dc5",
+   "id": "d1c69d08",
    "metadata": {
     "scrolled": true
    },
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9756c52a",
+   "id": "fb25c645",
    "metadata": {
     "scrolled": true
    },
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1b3c40ba",
+   "id": "f2bdda5c",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "715f165c",
+   "id": "916a986e",
    "metadata": {
     "scrolled": true
    },
@@ -1690,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8c7b845e",
+   "id": "bde8fc21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "8cf784c3",
+   "id": "781cb46c",
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1937,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4a5513d6",
+   "id": "a515549a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1959,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "479611d6",
+   "id": "dfe79a22",
    "metadata": {
     "scrolled": true
    },
@@ -2191,8 +2191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "7a464bed",
+   "execution_count": 62,
+   "id": "01a1ca2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,8 +2201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "c76c1a29",
+   "execution_count": 63,
+   "id": "bc6d9d8f",
    "metadata": {
     "scrolled": true
    },
@@ -2359,7 +2359,7 @@
        "[6981 rows x 5 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2371,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b0e831e3",
+   "id": "92a965ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2380,8 +2380,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "bd0d8eea",
+   "execution_count": 64,
+   "id": "3638b1cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "bb7fd857",
+   "id": "073be4a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "027988b9",
+   "id": "96642b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2410,18 +2410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "9ccf1d52",
+   "execution_count": 65,
+   "id": "2f4392b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml_df_metadata.to_csv('ml_df_metadata.tsv', sep=\"\\t\", header = None)"
+    "ml_df_metadata.to_csv('ml_df_metadata.tsv', sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "731a5d29",
+   "id": "a2596b6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,11 +2430,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "831a4283",
+   "execution_count": 66,
+   "id": "84a17f08",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6981, 5)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml_df_metadata.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c4c7c1d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6981, 192)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml_df_vectors.shape"
+   ]
   }
  ],
  "metadata": {
