--- a/AAFPG/data/Editing dataframes for plots.ipynb
+++ b/AAFPG/data/Editing dataframes for plots.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76dfce7e",
+   "id": "bea69016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "671faea1",
+   "id": "bd0a03ad",
    "metadata": {},
    "source": [
     "### Editing Keith's df for PCA and Projector Tensorflow - Machine Learning data"
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3f520d1d",
+   "execution_count": 2,
+   "id": "5eee35a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "75240ec3",
+   "execution_count": 3,
+   "id": "985679e1",
    "metadata": {
     "scrolled": true
    },
@@ -446,7 +446,7 @@
        "[8000 rows x 203 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,8 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e3ac7791",
+   "execution_count": 4,
+   "id": "fb0d2d46",
    "metadata": {
     "scrolled": true
    },
@@ -554,7 +554,7 @@
        "[8000 rows x 1 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "c486ae73",
+   "execution_count": 5,
+   "id": "57a67684",
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "       'Electronic', 'Instrumental'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,8 +587,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ba7b1ba2",
+   "execution_count": 6,
+   "id": "bc289b9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,8 +597,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2525ed40",
+   "execution_count": 7,
+   "id": "c5185f27",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "[6981 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,8 +788,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "1c8436e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dl_df_metadata.to_csv('metadata_df_2.tsv', sep=\"\\t\", header = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
-   "id": "53ea6450",
+   "id": "afaae099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3931d27f",
+   "id": "aea64981",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1f885a74",
+   "id": "64d9c8d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d1c69d08",
+   "id": "14666b01",
    "metadata": {
     "scrolled": true
    },
@@ -1228,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fb25c645",
+   "id": "dbe56352",
    "metadata": {
     "scrolled": true
    },
@@ -1242,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f2bdda5c",
+   "id": "63534187",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1676,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "916a986e",
+   "id": "e268b759",
    "metadata": {
     "scrolled": true
    },
@@ -1690,7 +1700,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "bde8fc21",
+   "id": "f2046c5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "781cb46c",
+   "id": "4d5771db",
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a515549a",
+   "id": "9ad42a0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "dfe79a22",
+   "id": "45da669f",
    "metadata": {
     "scrolled": true
    },
@@ -2192,7 +2202,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "01a1ca2f",
+   "id": "2e86f909",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2202,7 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "bc6d9d8f",
+   "id": "87618122",
    "metadata": {
     "scrolled": true
    },
@@ -2371,7 +2381,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "92a965ed",
+   "id": "4cbfe079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2381,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "3638b1cd",
+   "id": "e9627217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2391,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "073be4a7",
+   "id": "2a409230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "96642b24",
+   "id": "6341c723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2421,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2f4392b1",
+   "id": "c83708fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,7 +2431,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a2596b6c",
+   "id": "7dbb157d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,7 +2441,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "84a17f08",
+   "id": "4da629e1",
    "metadata": {},
    "outputs": [
     {
@@ -2452,7 +2462,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c4c7c1d5",
+   "id": "6e9b8ea5",
    "metadata": {},
    "outputs": [
     {
